tests/NormalTests/paczka1/fuzzy1/96621768.err
Error in line 3: CL4dofHk> A795 21,1
Error in line 1: g7fQ A795 45,4
Error in line 4: CL4dofHkD A795 96,8
Error in line 10: oFnw A798 8,0
Error in line 22: oFnw A795 79,9
Error in line 28: oFnw S422 17,08
Error in line 20: CL4dofHkD A795 26,5
Error in line 35: A798 S105 39,30
Error in line 38: g7fQ S105 15,1
